--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.3.1",
     "ngx-bootstrap": "^5.1.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
+    "tooltip.js": "^1.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
