--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "angular-bootstrap-md": "^8.1.1",
     "bootstrap": "^4.3.1",
     "ngx-bootstrap": "^5.1.0",
     "rxjs": "~6.4.0",
