app is now connected to database. User can successfully register

--- a/back-end/server/model-config.json
+++ b/back-end/server/model-config.json
@@ -38,5 +38,9 @@
   "appUser": {
     "dataSource": "mongo",
     "public": true
+  },
+  "MovieAppUser": {
+    "dataSource": "mongo",
+    "public": true
   }
 }
