--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "angular-bootstrap-md": "^8.1.1",
     "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
