--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@clr/ui": "^1.2.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "angular-bootstrap-md": "^8.1.1",
     "bootstrap": "^4.3.1",
